--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,5 @@ dependencies = {file = ["requirements.txt"]}
 
 [project.gui-scripts]
 sigmastatistics = "SigmaStatistics:Run"
+sigmastats = "SigmaStatistics:Run"
+sigmastat = "SigmaStatistics:Run"
