modified:   pyproject.toml 	modified:   src/SigmaStatistics/__init__.py 	modified:   src/SigmaStatistics/__main__.py 	modified:   src/SigmaStatistics/_version.py 	modified:   src/SigmaStatistics/build.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,6 @@ version = {attr = "SigmaStatistics.__version__"}
 dependencies = {file = ["requirements.txt"]}
 
 [project.gui-scripts]
-sigmastatistics = "SigmaStatistics:Run"
-sigmastats = "SigmaStatistics:Run"
-sigmastat = "SigmaStatistics:Run"
+sigmastatistics = "SigmaStatistics:AppRun"
+sigmastats = "SigmaStatistics:AppRun"
+sigmastat = "SigmaStatistics:AppRun"
